# freetures_extractor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
launch/: test.launch
scripts/: freetures_extractor_node.py  tensorboard.sh
src/freetures_extractor/: __init__.py  freetures_extractor.py  matcher.py
