cmake_minimum_required(VERSION 2.8.3)
project(freetures_extractor)

find_package(catkin_simple REQUIRED)
catkin_simple(ALL_DEPS_REQUIRED)

catkin_python_setup()

#############
## Install ##
#############


#############
## Testing ##
#############


## Add folders to be run by python nosetests
# catkin_add_nosetests(test)
